@@ -1,0 +1,8 @@
+Title: if: now able to configure minimum bandwidth limits
+Level: 2
+Component: checks
+Version: 1.2.5i3
+Date: 1399981533
+Class: feature
+
+
