@@ -107,6 +107,15 @@ parameters (dict): Due to its complexity, this check now uses a dictionary as
                    will trigger WARN/CRIT, if at least 50%/80% of the nominal bandwidth is
                    used. The default is to impose no levels on the traffic.
 
+                   {"traffic_minimum"} - a pair of two float values to be used as WARN/CRIT
+                   levels for the minimal bandwidth usage of the port. Integer numbers are interpreted
+                   as bytes per seconds. So a value of {(500,1000)} will trigger WARN/CRIT
+                   if either the ingoing or outgoing traffic is lower than 500/1000 bytes per second.
+                   If you use floating point number, those are interpreted as percentages
+                   of the available bandwidth as signalled by the port. A value of {(50.0, 80.0)}
+                   will trigger WARN/CRIT, if at less than 50%/80% of the nominal bandwidth is
+                   used. The default is to impose no levels on the traffic.
+
                    {"average"} - if you set this key to a number, then it is interpreted as
                    a time in minutes. The check will then compute the averaged used traffic
                    over approximately that range of time. Note: The algorithm used here is
