@@ -44,6 +44,7 @@
     * 0911 esx_vsphere_hostsystem.multipath: now able to configure paths minimum count...
     * 0159 brocade: Added support for brocade fdx switches
     * 0160 brocade_vdx_status: New check to monitor the operational state of vdx switches.
+    * 0916 if: now able to configure minimum bandwidth limits
     * 0777 FIX: special agent emcvnx: did not work with security file authentication...
     * 0786 FIX: zfsget: fixed compatibility with older Solaris agents...
     * 0809 FIX: brocade_fcport: Fixed recently introduced problem with port speed detection
